day4_state_mcahine/build/log/idf_py_stdout_output_84382
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/build/bootloader/esp-idf/esptool_py && /Users/bhupendra/.espressif/python_env/idf5.2_py3.11_env/bin/python /Users/bhupendra/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/build/bootloader/bootloader.bin
Bootloader binary size 0x5490 bytes. 0x2b70 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/day4_state_mcahine.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/day4_state_mcahine.c.obj 
/Users/bhupendra/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20250707/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.6\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/build/config -I/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/main -I/Users/bhupendra/esp/esp-idf/components/newlib/platform_include -I/Users/bhupendra/esp/esp-idf/components/freertos/config/include -I/Users/bhupendra/esp/esp-idf/components/freertos/config/include/freertos -I/Users/bhupendra/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/bhupendra/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/bhupendra/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/bhupendra/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/bhupendra/esp/esp-idf/components/freertos/esp_additions/include -I/Users/bhupendra/esp/esp-idf/components/esp_hw_support/include -I/Users/bhupendra/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/bhupendra/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/bhupendra/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/bhupendra/esp/esp-idf/components/heap/include -I/Users/bhupendra/esp/esp-idf/components/log/include -I/Users/bhupendra/esp/esp-idf/components/soc/include -I/Users/bhupendra/esp/esp-idf/components/soc/esp32s3 -I/Users/bhupendra/esp/esp-idf/components/soc/esp32s3/include -I/Users/bhupendra/esp/esp-idf/components/hal/platform_port/include -I/Users/bhupendra/esp/esp-idf/components/hal/esp32s3/include -I/Users/bhupendra/esp/esp-idf/components/hal/include -I/Users/bhupendra/esp/esp-idf/components/esp_rom/include -I/Users/bhupendra/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/bhupendra/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/bhupendra/esp/esp-idf/components/esp_common/include -I/Users/bhupendra/esp/esp-idf/components/esp_system/include -I/Users/bhupendra/esp/esp-idf/components/esp_system/port/soc -I/Users/bhupendra/esp/esp-idf/components/esp_system/port/include/private -I/Users/bhupendra/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/bhupendra/esp/esp-idf/components/xtensa/include -I/Users/bhupendra/esp/esp-idf/components/xtensa/deprecated_include -I/Users/bhupendra/esp/esp-idf/components/lwip/include -I/Users/bhupendra/esp/esp-idf/components/lwip/include/apps -I/Users/bhupendra/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/bhupendra/esp/esp-idf/components/lwip/lwip/src/include -I/Users/bhupendra/esp/esp-idf/components/lwip/port/include -I/Users/bhupendra/esp/esp-idf/components/lwip/port/freertos/include -I/Users/bhupendra/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/bhupendra/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/bhupendra/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/components/state_machine/include -I/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/components/storage/include -I/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/components/common/include -I/Users/bhupendra/esp/esp-idf/components/nvs_flash/include -I/Users/bhupendra/esp/esp-idf/components/spi_flash/include -I/Users/bhupendra/esp/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine=. -fmacro-prefix-map=/Users/bhupendra/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/day4_state_mcahine.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/day4_state_mcahine.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/day4_state_mcahine.c.obj -c /Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/main/day4_state_mcahine.c
/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/main/day4_state_mcahine.c: In function 'app_main':
/Users/bhupendra/ESP32_Project_Git/day4_state_mcahine/main/day4_state_mcahine.c:11:5: error: implicit declaration of function 'storage_save_state' [-Werror=implicit-function-declaration]
   11 |     storage_save_state(DEVICE_STATE_NORMAL);
      |     ^~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
